[package]
name = "bcs-ext"
version = "1.12.9"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
description = "Binary Canonical Serialization (BCS) Extension from startcoin"
repository = "https://github.com/shuimuliang/bcs_ext"
homepage = "https://eclipse.io"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.41"
bcs = "0.1.3"
serde = {version = "1.0.130"}
